fix device card overflow

--- a/src/assets/style/device-card.scss
+++ b/src/assets/style/device-card.scss
@@ -12,6 +12,7 @@
         min-height: 200px;
         position: relative;
         display: flex;
+        margin-bottom: 17px;
 
         img {
             justify-content: center;
@@ -24,7 +25,6 @@
     &__container {
         padding-left: 17px;
         padding-right: 22px;
-        margin-top: 17px;
         padding-bottom: 34px;
     }
 
@@ -46,6 +46,9 @@
         font-size: 16px;
         line-height: 20px;
         color: $dark_blue;
+        overflow: hidden;
+        max-height: 20px;
+        min-height: 20px;
     }
 
     &__description {
@@ -53,6 +56,9 @@
         font-size: 14px;
         line-height: 17px;
         color: $dark_gray1;
+        overflow: hidden;
+        max-height: 34px;
+        min-height: 34px;
     }
 
     &__rating-container {
