--- a/src/assets/style/devices-page-content.scss
+++ b/src/assets/style/devices-page-content.scss
@@ -5,5 +5,6 @@
     &__cards-container {
         display: flex;
         flex-wrap: wrap;
+        gap: 20px;
     }
 }
